syntax = "proto3";
package broker.chainapi.v1;
option go_package = "github.com/textileio/broker-core/gen/broker/chainapi/v1;chainapi";

message HasDepositRequest {
  string broker_id = 1;
  string account_id = 2;
}

message HasDepositResponse {
  bool has_deposit = 1;
}

service ChainApiService {
  rpc HasDeposit(HasDepositRequest) returns (HasDepositResponse) {}
}
